@@ -41,7 +41,6 @@ import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import javax.persistence.EntityManager;
 import javax.persistence.TypedQuery;
 import javax.persistence.criteria.CriteriaBuilder;
@@ -74,7 +73,6 @@ import org.hisp.dhis.trackedentity.TrackedEntityStore;
 import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValue;
 import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValueAudit;
 import org.hisp.dhis.trackedentityattributevalue.TrackedEntityAttributeValueAuditStore;
-import org.hisp.dhis.user.CurrentUserDetailsImpl;
 import org.hisp.dhis.user.CurrentUserUtil;
 import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.jdbc.core.JdbcTemplate;
@@ -141,7 +139,7 @@ public class HibernatePotentialDuplicateStore
                     order.getDirection().isAscending()
                         ? cb.asc(root.get(order.getField()))
                         : cb.desc(root.get(order.getField())))
-            .collect(Collectors.toList()));
+            .toList());
 
     TypedQuery<PotentialDuplicate> relationshipTypedQuery = getSession().createQuery(cq);
 
@@ -174,7 +172,7 @@ public class HibernatePotentialDuplicateStore
     return status == DeduplicationStatus.ALL
         ? Arrays.stream(DeduplicationStatus.values())
             .filter(s -> s != DeduplicationStatus.ALL)
-            .collect(Collectors.toList())
+            .toList()
         : Collections.singletonList(status);
   }
 
@@ -284,16 +282,21 @@ public class HibernatePotentialDuplicateStore
         duplicate.getEnrollments().stream()
             .filter(e -> !e.isDeleted())
             .filter(e -> enrollments.contains(e.getUid()))
-            .collect(Collectors.toList());
+            .toList();
 
     enrollmentList.forEach(duplicate.getEnrollments()::remove);
 
     enrollmentList.forEach(
         e -> {
           e.setTrackedEntity(original);
-          e.setLastUpdatedBy(getCurrentUser());
+          //          e.setLastUpdatedBy(getCurrentUser());
+          e.setLastUpdatedById(
+              CurrentUserUtil.getCurrentUserDetails() != null
+                  ? CurrentUserUtil.getCurrentUserDetails().getId()
+                  : null);
+
           e.setLastUpdatedByUserInfo(
-              UserInfoSnapshot.from(CurrentUserDetailsImpl.fromUser(getCurrentUser())));
+              UserInfoSnapshot.from(CurrentUserUtil.getCurrentUserDetails()));
           e.setLastUpdated(new Date());
           getSession().update(e);
         });
