@@ -43,7 +43,6 @@ import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 import org.hisp.dhis.common.OpenApi;
@@ -79,6 +78,8 @@ import org.hisp.dhis.query.Query;
 import org.hisp.dhis.query.QueryParserException;
 import org.hisp.dhis.schema.descriptors.MessageConversationSchemaDescriptor;
 import org.hisp.dhis.user.CurrentUser;
+import org.hisp.dhis.user.CurrentUserDetails;
+import org.hisp.dhis.user.CurrentUserDetailsImpl;
 import org.hisp.dhis.user.CurrentUserUtil;
 import org.hisp.dhis.user.User;
 import org.hisp.dhis.user.UserGroup;
@@ -138,11 +139,10 @@ public class MessageConversationController
       Map<String, String> parameters) {
 
     User currentUser = userService.getUserByUsername(CurrentUserUtil.getCurrentUsername());
-    if (!messageService.hasAccessToManageFeedbackMessages(currentUser)) {
+    if (!messageService.hasAccessToManageFeedbackMessages(
+        CurrentUserDetailsImpl.fromUser(currentUser))) {
       entity.setMessages(
-          entity.getMessages().stream()
-              .filter(message -> !message.isInternal())
-              .collect(Collectors.toList()));
+          entity.getMessages().stream().filter(message -> !message.isInternal()).toList());
     }
 
     boolean markRead = Boolean.parseBoolean(parameters.get("markRead"));
@@ -157,7 +157,7 @@ public class MessageConversationController
   public ResponseEntity<?> getObject(
       @PathVariable String uid,
       Map<String, String> rpParameters,
-      @CurrentUser User currentUser,
+      @CurrentUser CurrentUserDetailsImpl currentUserDetails,
       HttpServletRequest request,
       HttpServletResponse response)
       throws ForbiddenException, NotFoundException {
@@ -174,11 +174,11 @@ public class MessageConversationController
       return ResponseEntity.ok(objectNode);
     }
 
-    if (!canReadMessageConversation(currentUser, messageConversation)) {
+    if (!canReadMessageConversation(currentUserDetails, messageConversation)) {
       throw new AccessDeniedException("Not authorized to access this conversation.");
     }
 
-    return super.getObject(uid, rpParameters, currentUser, request, response);
+    return super.getObject(uid, rpParameters, currentUserDetails, request, response);
   }
 
   @Override
@@ -370,7 +370,7 @@ public class MessageConversationController
       @RequestBody String message,
       @RequestParam(value = "internal", defaultValue = "false") boolean internal,
       @RequestParam(value = "attachments", required = false) Set<String> attachments,
-      @CurrentUser User currentUser,
+      @CurrentUser CurrentUserDetailsImpl currentUser,
       HttpServletRequest request) {
     String metaData =
         MessageService.META_USER_AGENT + request.getHeader(ContextUtils.HEADER_USER_AGENT);
@@ -471,7 +471,7 @@ public class MessageConversationController
   public @ResponseBody RootNode setMessagePriority(
       @PathVariable String uid,
       @RequestParam MessageConversationPriority messageConversationPriority,
-      @CurrentUser User currentUser,
+      @CurrentUser CurrentUserDetailsImpl currentUser,
       HttpServletResponse response) {
     RootNode responseNode = new RootNode("response");
 
@@ -512,7 +512,7 @@ public class MessageConversationController
   public @ResponseBody RootNode setMessageStatus(
       @PathVariable String uid,
       @RequestParam MessageConversationStatus messageConversationStatus,
-      @CurrentUser User currentUser,
+      @CurrentUser CurrentUserDetailsImpl currentUser,
       HttpServletResponse response) {
     RootNode responseNode = new RootNode("response");
 
@@ -553,7 +553,7 @@ public class MessageConversationController
   public @ResponseBody RootNode setUserAssigned(
       @PathVariable String uid,
       @RequestParam(required = false) String userId,
-      @CurrentUser User currentUser,
+      @CurrentUser CurrentUserDetailsImpl currentUser,
       HttpServletResponse response) {
     RootNode responseNode = new RootNode("response");
 
@@ -581,7 +581,8 @@ public class MessageConversationController
     }
 
     if (messageConversation.getMessageType() == MessageType.TICKET
-        && !configurationService.isUserInFeedbackRecipientUserGroup(userToAssign)) {
+        && !configurationService.isUserInFeedbackRecipientUserGroup(
+            CurrentUserDetailsImpl.fromUser(userToAssign))) {
       response.setStatus(HttpServletResponse.SC_CONFLICT);
       responseNode.addChild(
           new SimpleNode(
@@ -606,7 +607,9 @@ public class MessageConversationController
       value = "/{uid}/assign",
       produces = {MediaType.APPLICATION_JSON_VALUE, MediaType.APPLICATION_XML_VALUE})
   public @ResponseBody RootNode removeUserAssigned(
-      @PathVariable String uid, @CurrentUser User currentUser, HttpServletResponse response) {
+      @PathVariable String uid,
+      @CurrentUser CurrentUserDetailsImpl currentUser,
+      HttpServletResponse response) {
     RootNode responseNode = new RootNode("response");
 
     if (!canModifyUserConversation(currentUser, currentUser)
@@ -643,7 +646,7 @@ public class MessageConversationController
       @PathVariable String uid,
       @RequestParam(required = false) String userUid,
       HttpServletResponse response,
-      @CurrentUser User currentUser) {
+      @CurrentUser CurrentUserDetailsImpl currentUser) {
     return modifyMessageConversationRead(
         userUid, Lists.newArrayList(uid), response, true, currentUser);
   }
@@ -655,7 +658,7 @@ public class MessageConversationController
       @RequestParam(value = "user", required = false) String userUid,
       @RequestBody List<String> uids,
       HttpServletResponse response,
-      @CurrentUser User currentUser) {
+      @CurrentUser CurrentUserDetailsImpl currentUser) {
     return modifyMessageConversationRead(userUid, uids, response, true, currentUser);
   }
 
@@ -670,7 +673,7 @@ public class MessageConversationController
       @PathVariable String uid,
       @RequestParam(required = false) String userUid,
       HttpServletResponse response,
-      @CurrentUser User currentUser) {
+      @CurrentUser CurrentUserDetailsImpl currentUser) {
     return modifyMessageConversationRead(
         userUid, Lists.newArrayList(uid), response, false, currentUser);
   }
@@ -682,7 +685,7 @@ public class MessageConversationController
       @RequestParam(value = "user", required = false) String userUid,
       @RequestBody List<String> uids,
       HttpServletResponse response,
-      @CurrentUser User currentUser) {
+      @CurrentUser CurrentUserDetailsImpl currentUser) {
     return modifyMessageConversationRead(userUid, uids, response, false, currentUser);
   }
 
@@ -697,10 +700,13 @@ public class MessageConversationController
       @RequestParam(value = "user", required = false) String userUid,
       @RequestBody List<String> uids,
       HttpServletResponse response,
-      @CurrentUser User currentUser) {
+      @CurrentUser CurrentUserDetailsImpl currentUser) {
     RootNode responseNode = new RootNode("response");
 
-    User user = userUid != null ? userService.getUser(userUid) : currentUser;
+    User user =
+        userUid != null
+            ? userService.getUser(userUid)
+            : userService.getUserByUsername(currentUser.getUsername());
 
     if (user == null) {
       response.setStatus(HttpServletResponse.SC_NOT_FOUND);
@@ -708,7 +714,7 @@ public class MessageConversationController
       return responseNode;
     }
 
-    if (!canModifyUserConversation(currentUser, user)) {
+    if (!canModifyUserConversation(currentUser, CurrentUserDetailsImpl.fromUser(user))) {
       throw new UpdateAccessDeniedException("Not authorized to modify this object.");
     }
 
@@ -749,10 +755,13 @@ public class MessageConversationController
       @RequestParam(value = "user", required = false) String userUid,
       @RequestBody List<String> uids,
       HttpServletResponse response,
-      @CurrentUser User currentUser) {
+      @CurrentUser CurrentUserDetailsImpl currentUser) {
     RootNode responseNode = new RootNode("response");
 
-    User user = userUid != null ? userService.getUser(userUid) : currentUser;
+    User user =
+        userUid != null
+            ? userService.getUser(userUid)
+            : userService.getUserByUsername(currentUser.getUsername());
 
     if (user == null) {
       response.setStatus(HttpServletResponse.SC_NOT_FOUND);
@@ -760,7 +769,7 @@ public class MessageConversationController
       return responseNode;
     }
 
-    if (!canModifyUserConversation(currentUser, user)) {
+    if (!canModifyUserConversation(currentUser, CurrentUserDetailsImpl.fromUser(user))) {
       throw new UpdateAccessDeniedException("Not authorized to modify this object.");
     }
 
@@ -804,7 +813,7 @@ public class MessageConversationController
   @PreAuthorize("hasRole('ALL') or hasRole('F_METADATA_IMPORT')")
   public WebMessage deleteObject(
       @PathVariable String uid,
-      @CurrentUser User currentUser,
+      @CurrentUser CurrentUserDetailsImpl currentUser,
       HttpServletRequest request,
       HttpServletResponse response)
       throws ForbiddenException,
@@ -825,7 +834,7 @@ public class MessageConversationController
   public @ResponseBody RootNode removeUserFromMessageConversation(
       @PathVariable(value = "mc-uid") String mcUid,
       @PathVariable(value = "user-uid") String userUid,
-      @CurrentUser User currentUser,
+      @CurrentUser CurrentUserDetailsImpl currentUser,
       HttpServletResponse response)
       throws DeleteAccessDeniedException {
     RootNode responseNode = new RootNode("reply");
@@ -838,7 +847,7 @@ public class MessageConversationController
       return responseNode;
     }
 
-    if (!canModifyUserConversation(currentUser, user)) {
+    if (!canModifyUserConversation(currentUser, CurrentUserDetailsImpl.fromUser(user))) {
 
       throw new DeleteAccessDeniedException("Not authorized to modify user: " + user.getUid());
     }
@@ -873,11 +882,14 @@ public class MessageConversationController
       @RequestParam("mc") List<String> mcUids,
       @RequestParam(value = "user", required = false) String userUid,
       HttpServletResponse response,
-      @CurrentUser User currentUser)
+      @CurrentUser CurrentUserDetailsImpl currentUser)
       throws DeleteAccessDeniedException {
     RootNode responseNode = new RootNode("response");
 
-    User user = userUid == null ? currentUser : userService.getUser(userUid);
+    User user =
+        userUid != null
+            ? userService.getUser(userUid)
+            : userService.getUserByUsername(currentUser.getUsername());
 
     if (user == null) {
       response.setStatus(HttpServletResponse.SC_NOT_FOUND);
@@ -885,7 +897,7 @@ public class MessageConversationController
       return responseNode;
     }
 
-    if (!canModifyUserConversation(currentUser, user)) {
+    if (!canModifyUserConversation(currentUser, CurrentUserDetailsImpl.fromUser(user))) {
       throw new DeleteAccessDeniedException("Not authorized to modify user: " + user.getUid());
     }
 
@@ -918,9 +930,10 @@ public class MessageConversationController
       @PathVariable(value = "mcUid") String mcUid,
       @PathVariable(value = "msgUid") String msgUid,
       @PathVariable(value = "fileUid") String fileUid,
-      @CurrentUser User currentUser,
+      @CurrentUser CurrentUserDetailsImpl currentUser,
       HttpServletResponse response)
       throws WebMessageException {
+
     Message message = getMessage(mcUid, msgUid, currentUser);
 
     FileResource fr = fileResourceService.getFileResource(fileUid);
@@ -969,20 +982,22 @@ public class MessageConversationController
    * @return true if the current user is allowed to remove the user from a conversation, false
    *     otherwise.
    */
-  private boolean canModifyUserConversation(User currentUser, User user) {
+  private boolean canModifyUserConversation(
+      CurrentUserDetailsImpl currentUser, CurrentUserDetailsImpl user) {
     return currentUser.equals(user) || currentUser.isSuper();
   }
 
   /**
    * Determines whether the given user has permission to read the MessageConversation.
    *
-   * @param user the user to check permission for.
+   * @param userDetails the user to check permission for.
    * @param messageConversation the MessageConversation to access.
    * @return true if the user can read the MessageConversation, false otherwise.
    */
   private boolean canReadMessageConversation(
-      User user, org.hisp.dhis.message.MessageConversation messageConversation) {
-    return messageConversation.getUsers().contains(user) || user.isSuper();
+      CurrentUserDetails userDetails,
+      org.hisp.dhis.message.MessageConversation messageConversation) {
+    return messageConversation.getUsers().contains(userDetails) || userDetails.isSuper();
   }
 
   /**
@@ -995,10 +1010,13 @@ public class MessageConversationController
       List<String> uids,
       HttpServletResponse response,
       boolean readValue,
-      User currentUser) {
+      CurrentUserDetailsImpl currentUser) {
     RootNode responseNode = new RootNode("response");
 
-    User user = userUid != null ? userService.getUser(userUid) : currentUser;
+    User user =
+        userUid != null
+            ? userService.getUser(userUid)
+            : userService.getUserByUsername(currentUser.getUsername());
 
     if (user == null) {
       response.setStatus(HttpServletResponse.SC_NOT_FOUND);
@@ -1006,7 +1024,7 @@ public class MessageConversationController
       return responseNode;
     }
 
-    if (!canModifyUserConversation(currentUser, user)) {
+    if (!canModifyUserConversation(currentUser, CurrentUserDetailsImpl.fromUser(user))) {
       throw new UpdateAccessDeniedException("Not authorized to modify this object.");
     }
 
@@ -1043,11 +1061,12 @@ public class MessageConversationController
    *
    * @param mcUid the message conversation UID.
    * @param msgUid the message UID.
-   * @param user the user.
+   * @param userDetails the user.
    * @return a {@link Message}.
    * @throws WebMessageException
    */
-  private Message getMessage(String mcUid, String msgUid, User user) throws WebMessageException {
+  private Message getMessage(String mcUid, String msgUid, CurrentUserDetails userDetails)
+      throws WebMessageException {
     org.hisp.dhis.message.MessageConversation conversation =
         messageService.getMessageConversation(mcUid);
 
@@ -1056,16 +1075,14 @@ public class MessageConversationController
           notFound(String.format("No message conversation with uid '%s'", mcUid)));
     }
 
-    if (!canReadMessageConversation(user, conversation)) {
+    if (!canReadMessageConversation(userDetails, conversation)) {
       throw new AccessDeniedException("Not authorized to access this conversation.");
     }
 
     List<Message> messages =
-        conversation.getMessages().stream()
-            .filter(msg -> msg.getUid().equals(msgUid))
-            .collect(Collectors.toList());
+        conversation.getMessages().stream().filter(msg -> msg.getUid().equals(msgUid)).toList();
 
-    if (messages.size() < 1) {
+    if (messages.isEmpty()) {
       throw new WebMessageException(
           notFound(
               String.format("No message with uid '%s' in messageConversation '%s", msgUid, mcUid)));
@@ -1073,7 +1090,8 @@ public class MessageConversationController
 
     Message message = messages.get(0);
 
-    if (message.isInternal() && !configurationService.isUserInFeedbackRecipientUserGroup(user)) {
+    if (message.isInternal()
+        && !configurationService.isUserInFeedbackRecipientUserGroup(userDetails)) {
       throw new WebMessageException(conflict("Not authorized to access this message"));
     }
 
